# parallel64

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  backup.c  pyproject.toml  qwiic_led_stick_test.py  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py  testfile.py
.github/workflows/: build.yml  install-linux.yml  install-windows.yml  install.yml
InpOutBinaries_1501/: DLPortIO.txt  ReadMe.txt  license.txt
InpOutBinaries_1501/Win32/: inpout32.h  inpout32.lib.license
InpOutBinaries_1501/x64/: inpout32.h  inpoutx64.dll.license
_parallel64/: __init__.py  constants.py
docs/: api.rst  conf.py  index.rst  install.rst  installation.rst
docs/source/: conf.py  index.rst  installation.rst  modules.rst  parallel64.inpoutdlls.rst  parallel64.rst
extension/: _parallel64.c
html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  parallel64.html  search.html  searchindex.js
html/_sources/: index.rst.txt
include/core/: portio.c  portio.h
include/helper/: enumfactory.h  modsetup.h
parallel64/: StandardPort.c  StandardPort.h  _BasePort.c  _BasePort.h  __init__.c  __init__.py  constants.py  enhanced_port.py  extended_port.py  gpio_port.py  init_json.json  parallel_port.py  pins.py  port_errors.py  portio.c  portio.h  simple_port.py  standard_port.py
parallel64/bitbang/: i2c.py  (+6 more)
source/: conf.py  index.rst
tekkport/: __init__.py  parallel_port.py  tekkport_errors.py
tests/: Pin.py  StandardPort.py  blinkatize.py  digitalio.py  pintest.py
(+51 files in other folders)
